--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,11 @@
 h2#timer_div {
-
+font-family: 'Satisfy', cursive;
 	margin-right: 37px;
+	font-size: 40px;
+
 }
 
-h1 {font-family: 'Permanent Marker', cursive;
+h1 {font-family: 'Satisfy', cursive;
 	font-size: 70px;
 	text-align: center;
 	color: white;
@@ -11,24 +13,27 @@ h1 {font-family: 'Permanent Marker', cursive;
 }
 
 #timeRemain, #time_div {
-	font-family: 'Fredoka One', cursive;
+	font-family: 'Satisfy', cursive;
 	margin-right: 40px;
 	color: white;
+	font-size: 40px;
 	
 	}
 
 body {
 	text-align: center;
 	background-color: gray;
+	font-size: 19px;
 }
 
 form {
-	font-family: 'Jura', sans-serif;
-	color: white;
+font-family: 'Catamaran', sans-serif;
+	color: beige;
+	font-weight: bolder;
 }
 
 .question{
-	font-style: italic;
+	font-family: 'Catamaran', sans-serif;
 	margin: 15px 2px;
 	color: white;
 }
@@ -36,17 +41,32 @@ form {
 .submit {
 	font-size: 20px;
 	margin: 20px 0px;
-	background-color: gray;
-	border: 3px solid darkgray;
-	
+	background-color: #5f4d6b;
+	border: 3px solid #581e80;
+	color: white;
 	font-family: 'Bowlby One SC', cursive;
 
 
 }
 
 body {
-	border: 2px solid white;
+
 	margin-left: 50px;
 	margin-right: 50px;
 	background-image: url("http://wallpoper.com/images/00/31/33/51/black-background_00313351.jpg");
+}
+
+#timerContainer{
+
+	text-align: center;
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border: 2px solid purple;
+	background-color: #654f73;
+}
+
+hr{
+
 }
